# Bitmodel

./: .gitignore  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: release.yml
app/: Cargo.toml
app/crates/cli/: Cargo.toml
app/crates/cli/src/: main.rs
app/crates/core/: Cargo.toml
app/crates/core/src/: allowlist.rs  hash.rs  keyring.rs  lib.rs  manifest.rs  sign.rs
app/crates/node/: Cargo.toml
app/crates/node/src/: collection.rs  lib.rs  pipeline.rs  registry.rs
app/crates/registry/: Cargo.toml
app/crates/registry/src/: main.rs
app/crates/validator/: Cargo.toml
app/crates/validator/src/: main.rs
app/deploy/: README.md  bitmodel-anchor.service  bitmodel-registry.service  bitmodel-relay.service  bitmodel.env.example  deploy.sh  trust.toml.example
docs/: README.md  glossary.md  trust-model.md
docs/roles/: client.md  registry.md  relay.md  seeder.md  validator.md
landingpage/: README.md  build.ts  index.html  package.json
landingpage/styles/: site.css
