[package]
name = "bitmodel-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "bitmodel"
path = "src/main.rs"

[dependencies]
bitmodel-core.workspace = true
bitmodel-node.workspace = true
clap = { workspace = true, features = ["env"] }
tokio.workspace = true
anyhow.workspace = true
indicatif.workspace = true
hex.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
