[package]
name = "bitmodel-node"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bitmodel-core.workspace = true
iroh = { version = "0.35", features = ["discovery-local-network"] }
iroh-blobs = { version = "0.35", features = ["rpc", "fs-store"] }
tokio.workspace = true
futures-lite.workspace = true
rand.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
tracing.workspace = true
reqwest.workspace = true
